--- a/health-check-test.yml
+++ b/health-check-test.yml
@@ -1,6 +1,7 @@
 ---
 - name: Meraki infrastructure Health - ALL
   hosts: localhost
+  connection: local
   gather_facts: false
   roles:
     - role: network.meraki_ops.health_checks
