--- a/generate-meraki-report.yml
+++ b/generate-meraki-report.yml
@@ -49,3 +49,6 @@
         name: "network.meraki_ops.report"
       vars:
         category: '{{ category_input }}'
+        meraki_network_id: ""
+      # This tells Ansible not to stop the play if the role encounters a non-critical failure.
+      ignore_errors: true
